# CalorieCanvas

./: .env.example  README.md  package-lock.json  package.json
api/: motivation.js
backend/: .env.example  Cargo.toml
backend/data/: calorie_canvas.sqlite3
backend/src/: main.rs
backend/src/api/: mod.rs  user_api.rs
backend/src/database/: mock_db.rs  mod.rs  seed_data.rs  sqlite_db.rs
backend/src/mocks/: mockMealRepo.rs  mockUserRepo
backend/src/models/: catalog.rs  mealModel.rs  mod.rs  user.rs  userModel.rs
backend/src/repos/: mealRepo.rs  userRepo.rs
backend/src/services/: goalCalculation.rs
calorie-canvas/: package-lock.json  package.json
public/: index.html
src/: .env.local  App.css  App.js  index.css  supabaseClient.js
src/components/: BarcodeScanner.jsx  CalorieSummary.jsx  LogSnackEntryModal.jsx  MealDetails.jsx  MobileTabBar.css  MobileTabBar.jsx  NavBar.css  NavBar.jsx  NewEntryLauncher.css  NewEntryLauncher.jsx  QuickActions.css  QuickActions.jsx  QuickActionsFloating.jsx  RecentMealsLogged.jsx  maindisplay.jsx
src/config/: api.js  runtime.js
src/model/: userModel.rs
src/pages/: Dashboard.css  Dashboard.jsx  Exercises.css  Exercises.jsx  LogMeal.css  LogMeal.jsx  Login.css  Login.jsx  Meals.jsx  NewIngredient.jsx  Profile.jsx  ProfileSetup.css  ProfileSetup.jsx  Progress.css  Progress.jsx  Signup.jsx  SnackDetails.jsx
src/services/: authClient.js  builtInIngredients.js  catalogClient.js  mealLogClient.js  motivationClient.js  profileClient.js  profileSetupProgress.js  progressService.js
supabase/: schema.sql
(+116 files in other folders)
